# aerial-fleet-monitor

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  LICENSE.md  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml  sf-agent-deploy.yml
api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
api/alembic/: env.py  script.py.mako
api/alembic/versions/: 0001_initial_schema.py  0002_flight_plans.py
api/app/: __init__.py  dependencies.py  exceptions.py  logging.py  main.py  observability.py  settings.py
api/app/models/: cases.py  common.py  flights.py  positions.py  salesforce.py  sites.py
api/app/routers/: __init__.py  admin.py  auth_stub.py  cases.py  flights.py  positions.py  sites.py
api/app/services/: _lightning.py  case_sync.py  lakehouse.py  postgres.py  query_service.py  salesforce.py
api/tests/: __init__.py  conftest.py  test_admin_sf_test_case.py  test_case_sync.py  test_cases.py  test_exceptions.py  test_flights_models.py  test_helpers.py  test_lakehouse.py  test_lightning.py  test_logging.py  test_observability.py  test_query_service.py  test_salesforce_integration.py  test_salesforce_service.py
api/tests/contract/: test_openapi_contract.py
docs/: API.md  ARCHITECTURE.md  BRD.md  DATA_MODEL.md  FRONTEND.md  OBSERVABILITY.md  PIPELINES.md  RUNBOOKS.md  SALESFORCE.md  SPEC.md  TESTING.md
foundry/ontology/: aircraft.yaml  case.yaml  flight.yaml  site.yaml
foundry/sync/: pyproject.toml
foundry/sync/src/afm_foundry_sync/: __init__.py  api_readers.py  logging.py  models.py  ontology_writers.py  retry.py  settings.py  sync_jobs.py  transforms.py
foundry/sync/tests/: conftest.py  test_api_readers.py  test_logging.py  test_ontology_writers.py  test_sync_jobs.py  test_transforms.py
foundry/workshop/: README.md
infra/cloudflared/: config.yml.example
infra/observability/grafana/dashboards/: 01_fleet_ops_overview.json  02_salesforce_health.json  03_pipeline_health.json  04_sites.json  05_case_detector_tuning.json
infra/observability/grafana/provisioning/dashboards/: dashboards.yml
infra/observability/grafana/provisioning/datasources/: datasources.yml
infra/observability/loki/: loki-config.yml
infra/observability/prometheus/: prometheus.yml
infra/observability/promtail/: promtail-config.yml
infra/postgres/: init.sql
infra/route53/: README.md  api-cname.json.example
pipelines/: .dockerignore  Dockerfile  __init__.py  dagster.yaml  definitions.py  pyproject.toml  workspace.yaml
pipelines/assets/: __init__.py  detection.py  flight_archival.py  flight_plan_enrichment.py  foundry_sync.py  ingestion.py  maintenance.py  reference.py  sync.py
pipelines/data/: __init__.py  icao24_denylist.txt  watchlist.json
pipelines/resources/: __init__.py  lakehouse.py  noaa.py  opensky.py  postgres.py  watchlist.py
pipelines/rules/: __init__.py  _build_sparse_cells.py  base.py  dedup.py  delay.py  diversion.py  excessive_hold.py  go_around.py  lost_signal.py  registry.py  weather_impact.py
pipelines/rules/data/: lost_signal_sparse_cells.json
pipelines/services/: __init__.py  baseline_provider.py
pipelines/tests/: rule_helpers.py  test_baseline_provider.py  test_case_detector_e2e.py  test_dedup.py  test_definitions.py  test_detection_asset.py  test_flight_archival.py  test_flight_plan_enrichment.py  test_foundry_sync_asset.py  test_lakehouse.py  test_maintenance_asset.py  test_opensky_resource.py  test_rule_base.py  test_rule_delay.py  test_rule_diversion.py  test_rule_excessive_hold.py  test_rule_go_around.py  test_rule_lost_signal.py  test_rule_weather_impact.py  test_sf_case_push.py  test_sf_case_sync.py
pipelines/tests/fixtures/opensky/: README.md  holiday_traffic.json  lost_signal_scenario.json  normal_day.json  off_peak.json  weather_event.json
runbooks/: customer-communication-ifr-operations.md  delayed-departure-triage.md  diversion-to-alternate.md  excessive-holding.md  go-around-investigation.md  lost-signal-cruise.md  severity-escalation-criteria.md  weather-driven-arrival-backups.md
salesforce/: .forceignore  sfdx-project.json
salesforce/force-app/main/default/applications/: AFM.app-meta.xml  AFM_Fleet_Ops_Console.app-meta.xml
salesforce/force-app/main/default/classes/: AFM_CaseTriageService.cls  AFM_CaseTriageService_Test.cls  AFM_CaseTriggerHandler.cls  AFM_TestDataFactory.cls  AFM_TriageCase.cls  AFM_TriageNarrative.cls  AFM_TriageNarrative_Test.cls
salesforce/force-app/main/default/customMetadata/: AFM_Runbook.Customer_Communication_IFR_Operations.md-meta.xml  AFM_Runbook.Delayed_Departure_Triage.md-meta.xml  AFM_Runbook.Diversion_To_Alternate.md-meta.xml  AFM_Runbook.Excessive_Holding.md-meta.xml  AFM_Runbook.Go_Around_Investigation.md-meta.xml  AFM_Runbook.Lost_Signal_Cruise.md-meta.xml  AFM_Runbook.Severity_Escalation_Criteria.md-meta.xml  AFM_Runbook.Weather_Driven_Arrival_Backups.md-meta.xml
salesforce/force-app/main/default/customPermissions/: AFM_All_Regions.customPermission-meta.xml  AFM_Region_East.customPermission-meta.xml  AFM_Region_West.customPermission-meta.xml
salesforce/force-app/main/default/dashboards/: AFM_Fleet_Ops_Dashboards.dashboardFolder-meta.xml
salesforce/force-app/main/default/flexipages/: AFM_Fleet_Operations_Case_Record.flexipage-meta.xml
salesforce/force-app/main/default/layouts/: Case-Case Layout.layout-meta.xml
salesforce/force-app/main/default/pathAssistants/: AFM_Fleet_Operations_Case.pathAssistant-meta.xml
salesforce/force-app/main/default/permissionsets/: AFM_East_Coast_Customer.permissionset-meta.xml  AFM_Fleet_Ops_Console_Access.permissionset-meta.xml  AFM_Internal_Ops.permissionset-meta.xml  AFM_Triage_Automation.permissionset-meta.xml  (+1 more)
scripts/: check-infra-leaks.sh  download_aircraft.py  download_airports.py  publish_agent.sh  record_opensky_fixture.py  seed_runbook_cmdt.sh  seed_runbook_files.sh
web/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  postcss.config.js  postcss.config.ts  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
(+58 files in other folders)
