# Aerial Fleet Monitor — API package
#
# Phase 00 scope: skeleton FastAPI app exposing /v1/health only.
# Runtime deps stay minimal here; phase-specific deps (simple_salesforce,
# etc.) are added as the matching phase lands.

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "afm-api"
version = "1.0.0"
description = "Aerial Fleet Monitor — FastAPI backend"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [
    { name = "Mark Andrew Marquez", email = "me@markandrewmarquez.com" }
]

dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6,<3",
    "structlog>=24.4,<25",
    "python-json-logger>=2.0,<3",
    "psycopg2-binary>=2.9,<3",
    "duckdb>=1.1,<2",
    "pytz>=2024.1",  # duckdb soft-requires for materializing TIMESTAMPTZ columns
    "simple-salesforce>=1.12,<2",  # Phase 04 — AFM→SF Case writes (planned tech stack)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<0.25",
    "pytest-cov>=5.0,<6",
    "httpx>=0.27,<0.28",          # FastAPI TestClient transport
    "ruff>=0.7,<0.8",
    "mypy>=1.13,<2",
    "alembic>=1.13,<2",
]

[tool.setuptools.packages.find]
include = ["app*"]

# ----------------------------------------------------------------------------
# Tooling configs
# ----------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv", "alembic/versions"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.ruff.lint.isort]
# `app` is this project's package; `alembic` is the third-party migration
# tool (the local alembic/ directory is config, not a Python package).
# Without these hints ruff misclassifies based on the alembic/ directory.
known-first-party = ["app"]
known-third-party = ["alembic"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/versions/"]

[[tool.mypy.overrides]]
module = ["simple_salesforce.*", "duckdb.*", "psycopg2", "psycopg2.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --strict-config"
