# Aerial Fleet Monitor — pipelines package (Dagster)
#
# Phase 00 scope: an empty `Definitions()` object that lets the Dagster
# webserver/daemon/user-code containers start cleanly. Real assets land
# in Phase 01 (ingestion) and Phase 05 (case detector).

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "afm-pipelines"
version = "1.0.0"
description = "Aerial Fleet Monitor — Dagster pipelines"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [
    { name = "Mark Andrew Marquez", email = "me@markandrewmarquez.com" }
]

dependencies = [
    "dagster>=1.9,<2",
    "dagster-webserver>=1.9,<2",
    "dagster-postgres>=0.25,<0.26",
    "psycopg2-binary>=2.9,<3",
    "structlog>=24.4,<25",
    # Phase 01 Step 3 — OpenSky ingestion.
    "pyarrow>=17,<20",
    "requests>=2.32,<3",
    "numpy>=1.26,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-cov>=5.0,<6",
    "ruff>=0.7,<0.8",
    "mypy>=1.13,<2",
    # Stubs for the `requests` runtime dep. Without this, mypy locally
    # treats `requests.*` as Any (via the override below) and silently
    # passes — but CI was historically pulling in older stubs that flag
    # `dict[str, str]` headers as incompatible with the stricter
    # `MutableMapping[str, str | bytes]` parameter type. Pinning the stub
    # explicitly + the corresponding code annotation keeps local and CI
    # in lockstep.
    "types-requests>=2.32",
]

# Flat-layout package: pyproject.toml sits alongside __init__.py and
# definitions.py. Explicit mapping is required since `find:` mode would
# scan subdirectories rather than treating the build root as the package.
[tool.setuptools]
packages = [
    "pipelines",
    "pipelines.assets",
    "pipelines.data",
    "pipelines.resources",
    # subpackages added in later phases: pipelines.jobs.
]
package-dir = {"pipelines" = "."}

[tool.setuptools.package-data]
"pipelines.data" = ["*.json", "*.txt"]

# Dagster discovers the Definitions object via DAGSTER_CODE_LOCATION /
# workspace.yaml. The module path is `pipelines.definitions`.

# ----------------------------------------------------------------------------
# Tooling configs
# ----------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = [
    "dagster.*",
    "dagster_webserver.*",
    "dagster_postgres.*",
    "psycopg2",
    "psycopg2.*",
    "pyarrow",
    "pyarrow.*",
    "requests",
    "requests.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
