# Aerial Fleet Monitor — pipelines package (Dagster)
#
# Phase 00 scope: an empty `Definitions()` object that lets the Dagster
# webserver/daemon/user-code containers start cleanly. Real assets land
# in Phase 01 (ingestion) and Phase 05 (case detector).

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "afm-pipelines"
version = "1.0.0"
description = "Aerial Fleet Monitor — Dagster pipelines"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [
    { name = "Mark Andrew Marquez", email = "me@markandrewmarquez.com" }
]

dependencies = [
    "dagster>=1.9,<2",
    "dagster-webserver>=1.9,<2",
    "dagster-postgres>=0.25,<0.26",
    "psycopg2-binary>=2.9,<3",
    "structlog>=24.4,<25",
    # Phase 01 Step 3 — OpenSky ingestion.
    "pyarrow>=17,<20",
    "requests>=2.32,<3",
    "numpy>=1.26,<3",
    # Phase 05 — the case-detector rule engine operates on tabular
    # last-hour position frames; DuckDB reads the lakehouse straight to a
    # pandas DataFrame via `.df()`.
    "pandas>=2.2,<3",
    # Phase 03 — the Foundry sync assets import `afm_foundry_sync`. It is a
    # sibling monorepo package with its own venv/pyproject, not on PyPI, so
    # it is editable-installed by `make install` (see Makefile) rather than
    # declared here as a PEP 508 path dependency (relative paths aren't
    # portably expressible in `dependencies`). httpx/tenacity come in transitively.
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-cov>=5.0,<6",
    "ruff>=0.7,<0.8",
    "mypy>=1.13,<2",
    # Stubs for the `requests` runtime dep. Without this, mypy locally
    # treats `requests.*` as Any (via the override below) and silently
    # passes — but CI was historically pulling in older stubs that flag
    # `dict[str, str]` headers as incompatible with the stricter
    # `MutableMapping[str, str | bytes]` parameter type. Pinning the stub
    # explicitly + the corresponding code annotation keeps local and CI
    # in lockstep.
    "types-requests>=2.32",
    # Stubs for the pandas runtime dep (Phase 05 rule engine). Without
    # these mypy treats pandas as untyped; pandas-stubs gives real
    # DataFrame/Series signatures under strict mode.
    "pandas-stubs>=2.2",
]

# Flat-layout package: pyproject.toml sits alongside __init__.py and
# definitions.py. Explicit mapping is required since `find:` mode would
# scan subdirectories rather than treating the build root as the package.
[tool.setuptools]
packages = [
    "pipelines",
    "pipelines.assets",
    "pipelines.data",
    "pipelines.resources",
    "pipelines.rules",
    "pipelines.services",
    # subpackages added in later phases: pipelines.jobs.
]
package-dir = {"pipelines" = "."}

[tool.setuptools.package-data]
"pipelines.data" = ["*.json", "*.txt"]

# Dagster discovers the Definitions object via DAGSTER_CODE_LOCATION /
# workspace.yaml. The module path is `pipelines.definitions`.

# ----------------------------------------------------------------------------
# Tooling configs
# ----------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true

# Type-gate source only, matching the repo convention (api runs
# `mypy app`, foundry/sync runs `mypy src/`). The pipelines lint target
# is `mypy .`, so tests are excluded here instead. Dagster's `@asset`
# decorator erases the wrapped return type, making strict-mode test
# assertions on `MaterializeResult` metadata noisy without adding signal.
[[tool.mypy.overrides]]
module = ["pipelines.tests.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "dagster.*",
    "dagster_webserver.*",
    "dagster_postgres.*",
    "psycopg2",
    "psycopg2.*",
    "pyarrow",
    "pyarrow.*",
    "requests",
    "requests.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
