# Aerial Fleet Monitor — Foundry sync service
#
# Phase 03 scope: Dagster-driven service that reads the local /v1 API and
# upserts Ontology objects (Aircraft, Flight, Site, Operator, Case-stub)
# into the AFM Foundry tenant via bearer-token auth. Separate venv from
# api/ — Foundry SDK deps don't pollute the FastAPI runtime.

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "afm-foundry-sync"
version = "1.0.0"
description = "Aerial Fleet Monitor — Foundry Ontology sync service"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [
    { name = "Mark Andrew Marquez", email = "me@markandrewmarquez.com" }
]

dependencies = [
    "httpx>=0.27,<0.28",            # async HTTP client for both /v1 reads and Foundry writes
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6,<3",
    "structlog>=24.4,<25",
    "python-json-logger>=2.0,<3",
    "tenacity>=9.0,<10",            # retry policy for transient Foundry errors
]
# NOTE: Foundry Platform SDK (foundry-platform-sdk) intentionally NOT a dep yet.
# The bearer-token + REST surface is simple enough to call directly via httpx;
# the SDK adds value when we need typed Ontology object generation (OSDK), which
# can land in a later commit alongside ontology_writers.py.

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<0.25",
    "pytest-cov>=5.0,<6",
    "respx>=0.21,<0.22",            # httpx mocking for unit tests
    "ruff>=0.7,<0.8",
    "mypy>=1.13,<2",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["afm_foundry_sync*"]

# ----------------------------------------------------------------------------
# Tooling configs (mirror api/ conventions for cross-package consistency)
# ----------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["afm_foundry_sync"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --strict-config"
